@@ -35,6 +35,7 @@ Bug fixes
  * Parent page link in page chooser search results no longer navigates away (Asanka Lihiniyagoda, Sævar Öfjörð Magnússon)
  * ``routablepageurl`` tag now correctly omits domain part when multiple sites exist at the same root (Gassan Gousseinov)
  * Added missing collection column specifier on document listing template (Sergey Fedoseev)
+ * Page Copy will now also copy ParentalManyToMany field relations (LB (Ben Johnston))
 
 
 Upgrade considerations
